<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_music"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/form_username"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:inputType="text"
            android:background="@drawable/warna"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/katasandi"
            android:layout_gravity="center"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/form_password"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/warna"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/loginText"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>